--- a/src/app/counter/counter.component.scss
+++ b/src/app/counter/counter.component.scss
@@ -124,6 +124,34 @@
 
 }
 
+.increasebyrange {
+    color: white;
+    font-weight: 300;
+    font-size: 1rem;
+    margin-top: 2rem;
+}
+
+.incrementby {
+    // width: 500px;
+    height: 50px;
+    padding: 1rem;
+    border-radius: 30px;
+    // border: 1px solid palegoldenrod;
+    display: flex;
+    justify-content: space-between;
+    align-items: Center;
+    gap: 0.5rem;
+}
+.incrementby > button {
+    width: 50px;
+    height: 50px;
+    border-radius: 30px;
+    border: none;
+    background: rgb(22, 22, 22);
+    color: palegoldenrod;
+}
+
+
 .refresh:hover {
     background:rgb(22, 22, 22);
     border: 1px solid palegoldenrod;
