--- a/src/app/counter/counter.component.html
+++ b/src/app/counter/counter.component.html
@@ -1,22 +1,22 @@
 <div class="main-container">
     <p id="title">Counter App</p>
     <div class="container">
-        <button class="btn-dec">-</button>
+        <button class="btn-dec" (click)="decrement()">-</button>
         <div class="counter">{{ count$ | async }}</div>
-        <button class="btn-inc">+</button>
+        <button class="btn-inc" (click)="increment()">+</button>
     </div>
     <div class="spec-value">
         <label for="setCountValue">Enter specific value</label>
-        <input type="number" name="" id="setCountValue">
+        <input type="number" name="" id="setCountValue" #value (keyup)="setValue(value.value)">
     </div>
     <p class="increasebyrange">Increase by range</p>
     <div class="incrementby">
-        <button class="range-increments">1</button>
-        <button class="range-increments">5</button>
-        <button class="range-increments">50</button>
-        <button class="range-increments">100</button>
+        <button class="range-increments" name="range-increments" (click)="setCounterRange(1)">1</button>
+        <button class="range-increments" name="range-increments" (click)="setCounterRange(5)">5</button>
+        <button class="range-increments" name="range-increments" (click)="setCounterRange(50)">50</button>
+        <button class="range-increments" name="range-increments" (click)="setCounterRange(100)">100</button>
     </div>
-    <div class="refresh">
+    <div class="refresh" (click)="reset()">
         Refresh
     </div>
 </div>
